--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,18 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+play.http.errorHandler = "controllers.CustomErrorHandler"
+
+play.modules.enabled += "modules.SecurityModule"
+
+play.http.filters = "filters.Filters"
+
+baseUrl="http://localhost:9000"
+
+pac4j.security {
+  rules = [
+    {"/basicalternative" = {
+      authorizers = "_authenticated_"
+      clients = "DirectBasicAuthClient"
+    }}
+  ]
+}
