finished basic auth

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
+play.http.secret.key="test"
+
 play.http.errorHandler = "controllers.CustomErrorHandler"
 
 play.modules.enabled += "modules.SecurityModule"
