implemented ldap authorizer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,3 +18,19 @@ pac4j.security {
     }}
   ]
 }
+
+pac4j.ldap {
+  url = "ldap://localhost:636"
+  base_user_dn = "ou=people,dc=planetexpress,dc=com"
+  conn_timeout = 500
+  resp_timeout = 1000
+  login_attribute = "mail"
+  username_attribute = "uid"
+  bind_dn =  "cn=admin,dc=planetexpress,dc=com"
+  bind_pwd="GoodNewsEveryone"
+}
+
+pac4j {
+  jwt_secret="12345678901234567890123456789012"
+}
+
